--- a/resume.html
+++ b/resume.html
@@ -16,5 +16,16 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <main>
+        <h1>My Resume</h1>
+        <div class="resume-container">
+            <!-- Replace 'your_resume.pdf' with your actual PDF file name -->
+            <iframe src="SWILT_resume.pdf" width="100%" height="700px" style="border: none;">
+                This browser does not support PDFs. Please download the PDF to view it: 
+                <a href="SWILT_Resume.pdf">Download PDF</a>.
+            </iframe>
+        </div>
+
+    </main>
 </body>
 </html>
