homepage edits, added tiles to store content in

--- a/index.html
+++ b/index.html
@@ -11,10 +11,40 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <main>
+        <div class="tile-grid">
+            <section class="tile">
+                <h2>About Me</h2>
+                <p>Hi, I'm Spencer Wilt. I graduated from Indiana University with a degree in Informatics and have a strong passion for baseball analytics and scouting. I’ve gained hands-on experience in the game through roles with Inside Edge as a Pitchers Timing Intern and with Sports Info Solutions as a Video Scout. I'm always looking to grow in the baseball world and bring data-driven insight to player evaluation.</p>
+            </section>
+            <section class="tile">
+                <h2>My Favorites</h2>
+                <ul>
+                    <li>Team</li>
+                    <li>Player</li>
+                    <li>Movie</li>
+                </ul>
+            </section>
+            <section class="tile">
+                <h2>Project 1</h2>
+                <p>Short description of Project 1.</p>
+                <a href="projects.html#project1">View Project 1</a>
+            </section>
+            <section class="tile">
+                <h2>Project 2</h2>
+                <p>Short description of Project 2.</p>
+                <a href="projects.html#project2">View Project 2</a>
+            </section>
+            <section class="tile">
+                <h2>Resume</h2>
+                <a href="resume.html" class="resume-btn">View My Resume</a>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
